--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -18,7 +18,7 @@
     {
         Layout = "_LayoutAdministratorlist";
     }
-    else if (controller == "AdminChartsController")
+    else if (controller == "AdminCharts")
     {
         Layout = "_LayoutAdministratorCharts";
     }
@@ -29,6 +29,10 @@
     else if (controller == "AdministratorHomePage")
     {
         Layout = "_LayoutAdministratorHomePage";
+    }
+    else if (controller == "AdminToUser")
+    {
+        Layout = "_LayoutAdminToUser";
     }
     else
     {
