--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutGetCpu.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutGetCpu.cshtml
@@ -31,7 +31,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" style="max-width:1500px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -53,6 +53,7 @@
     <script src="~/lib/chart.js/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
