--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterFromCSV
+﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterFromCSVViewModel
 
 @{
     ViewData["Title"] = "RegisterFromCSV";
