--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>二手書交換平台</title>
+    <link rel="icon" href="/icon/booktitle.ico" type="image/x-icon">
+    <title>
+        
+        二手書交換平台
+        </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
@@ -25,7 +29,8 @@
                     <partial name="_AsidePartial"></partial>
                 </div>
             </div>
-            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"><strong>二手書平台</strong></a></div>
+           @* <link rel="icon" href="/icon/book.ico" type="image/x-icon">*@
+            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;" > <strong>二手書平台</strong></a></div>
             
             <p class="flex-grow-1"></p>
             <div class="d-flex align-items-center justify-content-center px-1">
