--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoreMVC5_UsedBookProject.Models.AdministratorUser
+﻿@model CoreMVC5_UsedBookProject.ViewModels.AdministratorUserHomePage
 
 @{
     ViewData["Title"] = "管理員資料編輯";
