--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -34,6 +34,14 @@
     {
         Layout = "_LayoutAdminToUser";
     }
+    else if (controller == "Account")
+    {
+        Layout = "_LayoutAccount";
+    }
+    else if (controller == "warningController")
+    {
+        Layout = "_LayoutWarning";
+    }
     else
     {
         Layout = "_Layout"; 
