--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserData.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserData.cshtml
@@ -12,7 +12,7 @@
             <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="navtext">管理人員控管</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="AdminToUserController" asp-action="UserData" class="navtext" style="background-color: white; color:black;">使用者控管</a>
+            <a asp-controller="AdminToUser" asp-action="UserData" class="navtext" style="background-color: white; color:black;">使用者控管</a>
         </li>
         <li class="menu-item">
             <a asp-controller="AdminCharts" asp-action="ChartsView" class="navtext">管理員與使用者占比</a>
@@ -22,6 +22,9 @@
         </li>
         <li class="menu-item">
             <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="navtext">主頁面更新</a>
+        </li>
+        <li class="menu-item">
+            <a asp-controller="Account" asp-action="RegisterFromCSV" class="navtext">使用者批量註冊</a>
         </li>
     </ul>
 </div>
