--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserDetail.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserDetail.cshtml
@@ -20,6 +20,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="AdministratorEdit" asp-route-id="@Model.Id" class="btn btn-info">編輯</a>|
-    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
+    <a asp-action="UserEdit" asp-route-id="@Model.Id" class="btn btn-info">編輯</a>|
+    <a asp-controller="AdminToUser" asp-action="UserData" class="btn btn-primary">返回管理員資料列表</a>
 </div>
