--- a/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
@@ -22,22 +22,22 @@
             <a asp-controller="AdminCharts" asp-action="ChartsView" class="navtext">管理員與使用者占比</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="GetCpu" asp-action="CPUView" class="navtext" style="background-color: white; color:black;">當前CPU與記憶體使用率</a>
+            <a asp-controller="GetCpu" asp-action="CPUView" class="navtext" style="background-color: white; color:black;">當前進程CPU與記憶體使用率</a>
         </li>
         <li class="menu-item">
             <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="navtext">主頁面更新</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="Account" asp-action="RegisterFromCSV" class="navtext">使用者批量註冊</a>
+            <a asp-controller="Account" asp-action="RegisterFromCSV" class="navtext">使用者批量管理</a>
         </li>
     </ul>
 </div>
 
 <div style="display:flex;">
-    <div style="width: 30%; padding: 30%;">
+    <div style="width: 30%; margin:auto;">
     </div>
     <div class="content">
-        <h1>當前本機CPU與記憶體使用率</h1>
+        <h1>當前進程CPU與記憶體使用率</h1>
         <div style=" width:700px; height:400px">
             <canvas id="cpuChart" width="100" height="50"></canvas>
         </div>
