--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -34,7 +34,7 @@
     {
         Layout = "_LayoutAdminToUser";
     }
-    else if (controller == "Account")
+    else if (controller == "Account" && action == "RegisterFromCSV")
     {
         Layout = "_LayoutAccount";
     }
