--- a/CoreMVC5_UsedBookProject/Views/AdminCharts/ChartsView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminCharts/ChartsView.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "管理員與使用者占比";
 }
+<link href="~/css/chartview.css" rel="stylesheet" />
 <div class="sidebar">
     <ul class="menu">
         <li class="menu-item">
@@ -17,18 +18,56 @@
             <a asp-controller="AdminCharts" asp-action="ChartsView" class="navtext" style="background-color: white; color:black;">管理員與使用者占比</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="GetCpu" asp-action="CPUView" class="navtext">當前CPU與記憶體使用率</a>
+            <a asp-controller="GetCpu" asp-action="CPUView" class="navtext">當前進程CPU與記憶體使用率</a>
         </li>
         <li class="menu-item">
             <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="navtext">主頁面更新</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="Account" asp-action="RegisterFromCSV" class="navtext">使用者批量註冊</a>
+            <a asp-controller="Account" asp-action="RegisterFromCSV" class="navtext">使用者批量管理</a>
         </li>
     </ul>
 </div>
+
+
+<div>
+    <div>
+        <div class="">管理員佔比</div>
+        <div>使用者佔比</div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div style="display:flex;">
-    <div style="width: 30%; padding: 30%;">
+    <div style="width: 30%; margin:auto;">
     </div>
     <div class="content">
         <div style="display: flex;">
