--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -20,7 +20,9 @@
     @RenderSection("topJS", required: false)
 </head>
 <body style="overflow-x:hidden; max-width:100%;">
+
     <header>
+        
         <nav class="bg-white border-bottom box-shadow d-flex px-3 flex-wrap" id="navbar">
             <div class="d-flex align-items-center justify-content-center">
                 <label for="switch-aside" class="mb-0 hamber"><i class="bi bi-list hamber-i"></i></label><!--漢堡按鈕圖示-->
@@ -30,7 +32,7 @@
                 </div>
             </div>
            @* <link rel="icon" href="/icon/book.ico" type="image/x-icon">*@
-            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;" > <strong>二手書平台</strong></a></div>
+            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"> <strong>二手書交換平台</strong></a></div>
             
             <p class="flex-grow-1"></p>
             <div class="d-flex align-items-center justify-content-center px-1">
