--- a/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
@@ -7,6 +7,7 @@
 }
 <div class="container-fluid pb-5">
     <h1>變更密碼</h1>
+    <p class="text-danger">@TempData["Message"]</p>
     <div class="row">
         <div class="col-12">
             <form asp-action="ChangePassword">
