--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -7,6 +7,7 @@
 }
 <div class="container-fluid pb-5">
     <h1>我的資訊</h1>
+    <p class="text-danger">@TempData["Message"]</p>
     <div class="row">
         <div class="col-12">
             <form asp-action="ChangeUserInfo" method="post" enctype="multipart/form-data">
