--- a/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
@@ -63,15 +63,9 @@
         <li class="list-unstyled aside-link">
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
         </li>
-        @*<li class="list-unstyled aside-link">
+        <li class="list-unstyled aside-link">
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
-        </li>*@
-        @if (User.IsInRole("Administrator"))
-        {
-            @*<li class="list-unstyled aside-link">
-                <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ForgotPasswordUserName", "Account", new {})">忘記密碼</a>
-            </li>*@
-        }
+        </li>
     }
     else if ((controller == "Home" || controller == "Buyer") && User.IsInRole("Buyer"))
     {
