--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
     <link href="~/css/buttons.css" rel="stylesheet" />
     <script src="~/lib/chart.js/chart.min.js"></script>
@@ -32,7 +34,7 @@
                 </div>
             </div>
            @* <link rel="icon" href="/icon/book.ico" type="image/x-icon">*@
-            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"> <strong>二手書交換平台</strong></a></div>
+            <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a></div>
             
             <p class="flex-grow-1"></p>
             <div class="d-flex align-items-center justify-content-center px-1">
