--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     <form class="form-inline flex-grow-1 px-2" action="~/Home/SearchProducts" method="get">
                         <input class="form-control mr-sm-2" type="search" placeholder="輸入書名或ISBN" id="searchInput" oninput="getPredictions()" aria-label="Search" name="name">
                         <div id="predictionList"></div>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="fa fa-search"></span></button>
                     </form>
                     
                 </div>
