--- a/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
@@ -4,24 +4,20 @@
     ViewData["Title"] = "Forbidden";
 }
 
-<h1>拒絕存取</h1>
+<div class="container-fluid">
+    <h1>拒絕存取</h1>
 
-<h2>@(User.Identity.Name)雖通過帳密驗證</h2>
-但你所屬群組是@(User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Role))
-<ul>
-    @foreach (var roleClaim in User.Claims.Where(c => c.Type == ClaimTypes.Role))
-    {
-        <li>@roleClaim.Value</li>
-    }
-</ul>
-@if (!User.IsInRole("Seller")){
-    <p>本網站限Seller群組存取</p>
-}
-@if (!User.IsInRole("Administrator")){
-    <p>本網站限Administrator群組存取</p>
-}
+    <h2>@(User.Identity.Name)雖通過帳密驗證</h2>
+    但你所屬群組是
+    <ul>
+        @foreach (var roleClaim in User.Claims.Where(c => c.Type == ClaimTypes.Role))
+        {
+            <li>@roleClaim.Value</li>
+        }
+    </ul>
 
-<div>
-    <a asp-action="Index" asp-controller="Home">回首頁</a>
-    <a asp-action="SignOut" asp-controller="Account" class="ml-5 text-danger">登出</a>
+    <div>
+        <a asp-action="Index" asp-controller="Home">回首頁</a>
+        <a asp-action="SignOut" asp-controller="Account" class="ml-5 text-danger">登出</a>
+    </div>
 </div>
