--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -8,6 +8,7 @@
 }
 <div class="container-fluid">
     <h1>商品詳情</h1>
+    <p class="text-danger">@TempData["Message"]</p>
     <partial name="~/Views/Seller/DetailTablePartial/Swiper.cshtml" />
     <form action="~/Buyer/Details" method="post">
         <partial name="~/Views/Seller/DetailTablePartial/ProductInformation.cshtml" />
@@ -17,7 +18,6 @@
         <br />
         @if (Model.Trade == "金錢")
         {
-
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
                 購買
