--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -6,7 +6,7 @@
 }
 @if (User.Identity.IsAuthenticated)
 {
-    @if (User.IsInRole("Seller"))
+    @if (User.IsInRole("User"))
     {
         @*已登入*@
         //顯示使用者名稱+登出按鈕
