--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
             
             @if (User.Identity.IsAuthenticated)
             {
-                @if (!User.IsInRole("Buyer") && !User.IsInRole("Seller"))
+                @if (!User.IsInRole("User"))
                 {
                     <div class="nav-item-btn buttonpartial">
                         <partial name="_AdminLoginStatusPartial" />
