--- a/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
@@ -5,6 +5,7 @@
     var route = ViewContext.RouteData;
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 }
 <nav class="bg-white border-bottom box-shadow d-flex px-3" id="navbar">
     <div class="d-flex align-items-center justify-content-center">
@@ -14,7 +15,7 @@
             <partial name="_AsidePartial"></partial>
         </div>
     </div>
-    <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Seller" asp-action="Index" style="font-size: 20px;"><strong>二手書平台-賣家中心</strong></a></div>
+    <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Seller" asp-action="Index" style="font-size: 20px;"><span class="fa fa-book"><strong>二手書交換平台-賣家中心</strong></a></div>
     <p class="flex-grow-1"></p>
     <partial name="_LoginStatusPartial" />
 </nav>
