--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file1" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
                     <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file2" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file2" accept="image/*" id="file2" />
                     <p id="p-file2" class="d-block ml-3">未選擇任何檔案</p>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file3" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file3" accept="image/*" id="file3" />
                     <p id="p-file3" class="d-block ml-3">未選擇任何檔案</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file4" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file4" accept="image/*" id="file4" />
                     <p id="p-file4" class="d-block ml-3">未選擇任何檔案</p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file5" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file5" accept="image/*" id="file5" />
                     <p id="p-file5" class="d-block ml-3">未選擇任何檔案</p>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file6" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file6" accept="image/*" id="file6" />
                     <p id="p-file6" class="d-block ml-3">未選擇任何檔案</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file7" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file7" accept="image/*" id="file7" />
                     <p id="p-file7" class="d-block ml-3">未選擇任何檔案</p>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file8" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file8" accept="image/*" id="file8" />
                     <p id="p-file8" class="d-block ml-3">未選擇任何檔案</p>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file9" class="btn btn-primary">
-                        選擇檔案
+                        <i class="bi bi-upload"></i> 選擇檔案
                     </label>
                     <input type="file" class="d-none" name="file9" accept="image/*" id="file9" />
                     <p id="p-file9" class="d-block ml-3">未選擇任何檔案</p>
